# TolueneDAW

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO
src/: CMakeLists.txt
src/app/: main.cpp
src/backend/: CMakeLists.txt
src/backend/audio/: CMakeLists.txt  audiobackend.cpp  audiobackend.h  rtaudiobackend.cpp  rtaudiobackend.h
src/backend/tui/: CMakeLists.txt  ncursestui.cpp  ncursestui.h  tui.cpp  tui.h
